<resources>
    <string name="app_name">FreeFrom</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Moja dieta</string>
    <string name="menu_favourite">Ulubione</string>
    <string name="menu_opinion">Opinie</string>
    <string name="menu_share">Udostępnij</string>
    <string name="menu_settings">Ustawienia</string>
    <string name="menu_button">Menu</string>
    <string name="menu_version">Wersja 1.0</string>

    <string name="title_activity_loading">LoadingActivity</string>
    <string name="loading_icon">Loading</string>
    <string name="title_activity_opinion">OpinionActivity</string>
    <string name="login">login</string>
    <string name="password">hasło</string>
    <string name="sign_in">Zaloguj</string>
    <string name="sign_up">Zarejestruj</string>
    <string name="signin_or_register">Zaloguj lub zarejestruj</string>
    <string name="synchronize">Synchronizuj</string>
    <string name="settings">Ustawienia</string>
    <string name="logout">Wyloguj</string>
    <string name="save">Zapisz</string>
    <string name="back">Powrót</string>
    <string name="ok">OK</string>
    <string name="continue_without_login">Kontunuuj bez logowania</string>
    <string name="title_activity_diet_list">DietList</string>
    <string name="hint_diet_name">Nazwa diety</string>
    <string name="allergens">Alergeny</string>
    <string name="diet">Dieta</string>
    <string name="cancel">Anuluj</string>
    <string name="share">Udostępnij swoją dietę</string>
</resources>
