<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditDiet">

    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/diet"
                android:textSize="30sp" />

        <EditText
                android:id="@+id/dietNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:capitalize="sentences"
                android:ems="10"
                android:hint="@string/hint_diet_name"
                android:inputType="textPersonName"
                android:textSize="16sp" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/allergens"
                android:textSize="30sp" />

        <include
                layout="@layout/allergen_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="20dp">


            <Button
                    android:id="@+id/saveDietButton"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="0.5"
                    android:text="@string/save"
                    android:textSize="20sp" />

            <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="0.5"
                    android:text="@string/cancel"
                    android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>